MEET-362 fix minor alignment bug

--- a/frontend/css/live-conference.less
+++ b/frontend/css/live-conference.less
@@ -102,15 +102,15 @@ html.no-getusermedia body.hublin-live-conference-app #unsupported {
   align-content: center;
   .left {
     margin-right: 10px;
-
-    i {
-      position: relative;
-    }
   }
   .right {
     display: flex;
     flex-flow: column;
     text-align: left;
+
+    a {
+      cursor: pointer;
+    }
   }
 }
 .information {
